Fix some bugs on mobile

--- a/src/app/entries/entries.component.scss
+++ b/src/app/entries/entries.component.scss
@@ -19,6 +19,10 @@
     .entries-link {
         padding: 0;
     }
+
+    .horse-name-field {
+        box-sizing: content-box;
+    }
 }
 
 .entries-link-cell {
